me pide que configure app hosting?

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,7 +1,30 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
 
+# The command to build your web framework.
+build:
+  # You can specify a build command here. For example:
+  run: npm run build
+# The command to run your web framework.
+run:
+  # You can specify a run command here. For example:
+  run: npm run start
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
-  maxInstances: 1
+  maxInstances: 2
+# Pass environment variables to your build and run commands.
+# https://firebase.google.com/docs/app-hosting/configure-backend#set-env-vars
+env:
+  - variable: NEXT_PUBLIC_GOOGLE_MAPS_API_KEY
+    availability:
+      - BUILD
+      - RUNTIME
+  - variable: NEXT_PUBLIC_GOOGLE_MAPS_MAP_ID
+    availability:
+      - BUILD
+      - RUNTIME
+  - variable: MP_ACCESS_TOKEN
+    availability:
+      - BUILD
+      - RUNTIME
