--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,4 +1,4 @@
-runtime: nodejs18
+runtime: nodejs20
 
 env:
   - variable: NODE_ENV
@@ -8,4 +8,4 @@ build:
   command: npm run build
 
 run:
-  command: npm start
+  command: npm run start
