Perfecto, gracias por pegar **los 3 archivos**. Con esto ya se ve **exac

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,11 +1,7 @@
 runtime: nodejs20
 
-env:
-  - variable: NODE_ENV
-    value: production
-
 build:
   command: npm run build
 
 run:
-  command: npm run start
+  command: npm start
