--- a/workspace/apphosting.yaml
+++ b/workspace/apphosting.yaml
@@ -5,7 +5,7 @@ env:
     value: production
 
 build:
-  command: npm run build
+  command: npm install && npm run build
 
 run:
   command: npm start
