--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^12.2.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.5",
     "patch-package": "^8.0.0",
