--- a/package.json
+++ b/package.json
@@ -34,22 +34,23 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@vis.gl/react-google-maps": "^1.0.0",
-    "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.6.0",
+    "embla-carousel-react": "^8.1.5",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
     "lucide-react": "^0.475.0",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-day-picker": "^8.10.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-places-autocomplete": "^4.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
