--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "embla-carousel-react": "^8.1.5",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
-    "lucide-react": "^0.475.0",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
@@ -51,7 +50,8 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-places-autocomplete": "^4.0.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "lucide-react": "^0.475.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
