--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-places-autocomplete": "^4.0.1",
-    "zod": "^3.23.8",
-    "lucide-react": "^0.475.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
