--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "embla-carousel-react": "^8.1.5",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
+    "lucide-react": "^0.395.0",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
