--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-places-autocomplete": "^4.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
