--- a/src/package.json
+++ b/src/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -41,6 +42,7 @@
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
     "lucide-react": "^0.395.0",
+    "mercadopago": "^2.0.11",
     "next": "14.2.35",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
