--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -4,20 +4,20 @@ runtime: nodejs20
 env:
   # Replace with your REAL VAPID Key from the new Firebase Project
   - variable: NEXT_PUBLIC_FCM_VAPID_KEY
-    value: "YOUR_REAL_VAPID_KEY"
+    value: "BEXXXXXXXXXXXXX" # Reemplazar con la VAPID Key real
   # Replace with your REAL Firebase project credentials
   - variable: NEXT_PUBLIC_FIREBASE_API_KEY
-    value: "AIzaSy...REAL_API_KEY"
+    value: "AIzaSyCvJiKLN9UStCWaOlIa_6kv2kw3fUZ6CKo"
   - variable: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
     value: "vamo-app-real.firebaseapp.com"
   - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
     value: "vamo-app-real"
   - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
-    value: "vamo-app-real.appspot.com"
+    value: "vamo-app-real.firebasestorage.app"
   - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
-    value: "YOUR_REAL_MESSAGING_SENDER_ID"
+    value: "196111752704"
   - variable: NEXT_PUBLIC_FIREBASE_APP_ID
-    value: "YOUR_REAL_APP_ID"
+    value: "1:196111752704:web:19a6c3d34a5361af15c2e5"
   # Set the MercadoPago Access Token here
   - variable: MERCADOPAGO_ACCESS_TOKEN
     value: "YOUR_REAL_MP_ACCESS_TOKEN"
