--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "firebase-admin": "^12.2.0",
     "lucide-react": "^0.395.0",
     "mercadopago": "^2.0.11",
-    "next": "14.2.35",
-    "react": "18.3.1",
+    "next": "14.2.3",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
@@ -55,7 +55,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
