--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -24,6 +24,9 @@ env:
   # Set the base URL for the app
   - variable: NEXT_PUBLIC_APP_URL
     value: "https://<your-app-url>"
+  # Set the Google Maps API Key here
+  - variable: NEXT_PUBLIC_GOOGLE_MAPS_API_KEY
+    value: "YOUR_REAL_GOOGLE_MAPS_API_KEY"
 
 
 build:
@@ -31,3 +34,4 @@ build:
 
 run:
   command: npm start
+
