Perfecto. Esto que pegaste **ya no es un bug de arquitectura ni de Next*

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,19 +5,19 @@ env:
   # Replace with your REAL VAPID Key from the new Firebase Project
   - variable: NEXT_PUBLIC_FCM_VAPID_KEY
     value: "BEXXXXXXXXXXXXX" # Reemplazar con la VAPID Key real
-  # Replace with your REAL Firebase project credentials
+  # Firebase project credentials for 'studio-6697160840-7c67f'
   - variable: NEXT_PUBLIC_FIREBASE_API_KEY
-    value: "YOUR_REAL_FIREBASE_API_KEY"
+    value: "AIzaSyCvJiKLN9UStCWaOlIa_6kv2kw3fUZ6CKo"
   - variable: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
-    value: "vamo-app-real.firebaseapp.com"
+    value: "studio-6697160840-7c67f.firebaseapp.com"
   - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
-    value: "vamo-app-real"
+    value: "studio-6697160840-7c67f"
   - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
-    value: "vamo-app-real.firebasestorage.app"
+    value: "studio-6697160840-7c67f.appspot.com"
   - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
-    value: "196111752704"
+    value: "6697160840"
   - variable: NEXT_PUBLIC_FIREBASE_APP_ID
-    value: "1:196111752704:web:19a6c3d34a5361af15c2e5"
+    value: "1:6697160840:web:d335a78215882e3089d494"
   # Set the MercadoPago Access Token here
   - variable: MERCADOPAGO_ACCESS_TOKEN
     value: "YOUR_REAL_MP_ACCESS_TOKEN"
@@ -34,5 +34,6 @@ build:
 
 run:
   command: npm start
+
 
 
